11725
{code}
Welcome to Scala 2.11.9-20161011-223004-db9290a3ff (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_101).
Type in expressions for evaluation. Or try :help.

scala> val buf = scala.collection.mutable.Map[Vector[Int], Vector[Int]]()
buf: scala.collection.mutable.Map[Vector[Int],Vector[Int]] = Map()

scala> Seq(1) foreach (x => buf(bippydoo) :+= x)
<console>:13: error: not found: value bippydoo
       Seq(1) foreach (x => buf(bippydoo) :+= x)
                                ^
{code}
